--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "express-ipfilter": "^1.3.2",
+    "express-rate-limit": "^8.0.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3"
   }
